--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -145,7 +145,7 @@
                   <h1>Altre convenzioni </h1>
                   <div class="notice-in fs-flash-in"> Se hai un codice di attivazione inseriscilo qui sotto.
                   </div>
-                  <p><%= f.text_field :sez, {:style => 'width:89%;', :label => l(:label_codice_attivazione), :maxlength => 255} %></p>
+                  <p><%= f.text_field :codice_attivazione, {:style => 'width:89%;', :label => l(:label_codice_attivazione), :maxlength => 255} %></p>
               </div>
                 <br />
 
