--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -26,7 +26,7 @@
                           <div class="fs-postmetadatafooter-author-ko">
                             <div class="fs-postmetadatafooter-author">
                              <% if !articolo.author.nil? && !articolo.author.user_profile.nil? %>
-                                  <span><%= link_to  articolo.author.user_profile.my_avatar(:xs), profile_show_path(articolo.author.user_profile)   %> </span>
+                                  <span><%= link_to  articolo.author.my_avatar(:xs), profile_show_path(articolo.author.user_profile)   %> </span>
                               <% else %>
                                   <span style="width: 32px;">Di:</span>
                               <% end %>
@@ -41,7 +41,7 @@
                           <div class="fs-postmetadatafooter-author-ok">
                             <div class="fs-postmetadatafooter-author">
                               <% if !articolo.author.nil? && !articolo.author.user_profile.nil? %>
-                                  <span><%= link_to articolo.author.user_profile.my_avatar(:xs), profile_show_path(articolo.author.user_profile) %> </span>
+                                  <span><%= link_to articolo.author.my_avatar(:xs), profile_show_path(articolo.author.user_profile) %> </span>
                               <% else %>
                                   <span style="width: 32px;">Di:</span>
                               <% end %>
