--- a/app/views/users/_dati.html.erb
+++ b/app/views/users/_dati.html.erb
@@ -36,7 +36,7 @@
         <p><%= f.text_field :fax, :label => :field_fax, :required => false, :size => 25  %></p>
         <p><%= f.text_field :telefono2, :label => :field_telefono2, :required => false, :size => 25  %></p>
         <p><%= f.text_field :mail2, :label => :field_mail2, :required => false, :size => 25  %></p>
-        <p><%= f.text_field :sez, :label => :field_sez, :required => false, :size => 25  %></p>
+        <p><%= f.text_field :codice_attivazione, :label => :field_sez, :required => false, :size => 25  %></p>
         <p><%= f.text_field :iva_, :label => :field_iva_, :required => false, :size => 25  %></p>
         <p><%= f.text_field :codicefiscale, :label => :field_codicefiscale, :required => false, :size => 25  %></p>
         <p><%= f.text_field :partitaiva, :label => :field_partitaiva, :required => false, :size => 25  %></p>
@@ -48,7 +48,7 @@
 
         <p><%= f.text_field :registrato, :label => :field_registrato, :required => false, :size => 25  %></p>
         <p><%= f.text_field :num_reg_coni, :label => :field_num_reg_coni, :required => false, :size => 25  %></p>
-          <p><%= f.check_box :abbonato, :label => :field_abbonato  %> </p>
+          <p><%= f.check_box :use_gravatar, :label => :field_abbonato  %> </p>
           <p><%= f.check_box :disabilitato, :label => :field_disabilitato  %> </p>
           <p><%= f.check_box :se_condition, :label => :field_se_condition  %> </p>
           <p><%= f.check_box :se_privacy, :label => :field_se_privacy  %> </p>
