--- a/app/views/mio_profilo/account.html.erb
+++ b/app/views/mio_profilo/account.html.erb
@@ -25,9 +25,9 @@
     <% labelled_form_for @user, :url => {:controller => 'mio_profilo', :action => 'account'}, :html => {:method => :post, :class => "register tabular", :class => "step" , :multipart => true} do |f| %>
         <%= error_messages_for 'user' %>
     <div class="fs-abbo-sx1 fs-profiles-esx-btn">
-       <label><%= f.radio_button :use_gravatar,true, {:checked => @user.use_gravatar == true,  :onchange => "funct_uavatar('g')"} %> <%= 'Usa mail su Gravatar' %></label><br/>
-          <label><%= f.radio_button :use_gravatar,false, {:checked => @user.use_gravatar == false,  :onchange => "funct_uavatar('a')"} %> <%= 'Usa tua immagine Avatar' %></label><br/>
-      <%= f.file_field :photo, :id=> "uphoto"  %>
+       <label><%= f.radio_button :use_gravatar,true, {:checked => @user.use_gravatar == true,  :onchange => "funct_avatar('g','fs-photo-edit','user_use_gravatar_true')"} %> <%= 'Usa mail su Gravatar' %></label><br/>
+          <label><%= f.radio_button :use_gravatar,false, {:checked => @user.use_gravatar == false,  :onchange => "funct_avatar('a','fs-photo-edit','user_use_gravatar_false')"} %> <%= 'Usa tua immagine Avatar' %></label><br/>
+      <%= f.file_field :photo, :id=> "uphoto"   %>
      </div>
     <div id="fs-photo-edit" class="fs-abbo-dx1">
             <% if @user.use_gravatar.nil? || @user.use_gravatar == 1 %>
@@ -222,27 +222,7 @@
             }, false
 
     );
-    function funct_uavatar(val) {
-        if (val == 'g') {
-            document.getElementById('fs-photo-edit-i').style.display = 'none';
-            document.getElementById('fs-photo-edit-a').style.display = 'none';
-            document.getElementById('fs-photo-edit-g').style.display = 'block';
-        }
-        else if (val == 'a') {
-            document.getElementById('fs-photo-edit-i').style.display = 'none';
-            document.getElementById('fs-photo-edit-a').style.display = 'block';
-            document.getElementById('fs-photo-edit-g').style.display = 'none';
-        }
-        else if (val == 'i') {
-            document.getElementById('fs-photo-edit-i').style.display = 'block';
-            document.getElementById('fs-photo-edit-a').style.display = 'none';
-            document.getElementById('fs-photo-edit-g').style.display = 'none';
-            document.getElementById('user_use_gravatar_false').checked = true;
-            document.getElementById('user_use_gravatar_true').checked = false;
-            document.getElementById('user_use_gravatar_false').setAttribute('checked', 'checked');
-        }
 
-    }
 </script>
 <%# javascript_include_tag "jquery/jquery.stepy.min.js" %>
 <%= javascript_include_tag "jquery/select2.min.js" %>
@@ -540,97 +520,5 @@
     }
 </script>
 
-<hr>
 <div class="clearfix"></div>
 
-
-<h2><%= l(:label_my_account) %></h2>
-<%= error_messages_for 'user' %>
-
-<% form_for :user, @user, :url => {:action => "account"},
-            :builder => TabularFormBuilder,
-            :lang => current_language,
-            :html => {:id => 'my_account_form'} do |f| %>
-    <div class="splitcontentleft">
-      <fieldset class="box tabular">
-        <legend><%= l(:label_information_plural) %></legend>
-        <p><%= f.text_field :firstname, :required => true %></p>
-
-        <p><%= f.text_field :lastname, :required => true %></p>
-
-        <p><%= f.text_field :mail, :required => true %></p>
-
-        <p><%= f.select :language, lang_options_for_select %></p>
-        <% if Setting.openid? %>
-            <p><%= f.text_field :identity_url %></p>
-        <% end %>
-
-        <% @user.custom_field_values.select(&:editable?).each do |value| %>
-            <p><%= custom_field_tag_with_label :user, value %></p>
-        <% end %>
-        <%= call_hook(:view_my_account, :user => @user, :form => f) %>
-      </fieldset>
-
-      <%= submit_tag l(:button_save) %>
-    </div>
-
-    <div class="splitcontentright hide">
-      <fieldset class="box">
-        <legend><%= l(:field_mail_notification) %></legend>
-        <%= render :partial => 'users/mail_notifications' %>
-      </fieldset>
-
-      <fieldset class="box tabular hide">
-        <legend><%= l(:label_preferences) %></legend>
-        <%= render :partial => 'users/preferences' %>
-      </fieldset>
-
-
-      <fieldset class="box tabular">
-        <legend><%= l(:label_convention) %></legend>
-        <div class="fs-logged2 fs-blockcontent ">
-          <ul>
-            <% if User.current.convention %>
-                <li>
-                  Coperto dalla convenzione:
-                  <br/> <%= link_to h(User.current.convention), convention_path(User.current.convention) %>
-                </li>
-            <% else %>
-                <% if User.current.cross_organization %>
-                    <li>
-                      Federato
-                      a:<br/> <%= link_to h(User.current.cross_organization), cross_organization_path(User.current.cross_organization) %>
-                    </li>
-                <% end %>
-            <% end %>
-            <% if User.current.responsable? && User.current.responsable_of
-                 User.current.responsable_of.each do |conv| %>
-                    <li>
-                      Responsabile della convenzione: <%= link_to h(conv), convention_path(conv) %>
-                    </li>
-                <% end
-                   end %>
-            <li>
-              <%= link_to l(:label_logout), :signout %>
-            </li>
-          </ul>
-
-          <div class="fs-logged2-ico">
-            <% if User.current.convention %>
-                <%= image_tag "/images/commons/assos/#{ User.current.convention.logo}", :width => 50, :height => 50, :border => 0 %>
-            <% else %>
-                <%= image_tag "/images/ico/fs.png", :width => 50, :height => 50, :border => 0 %>
-            <% end %>
-          </div>
-        </div>
-      </fieldset>
-
-
-    </div>
-<% end %>
-
-<% content_for :sidebar do %>
-    <%= render :partial => 'sidebar' %>
-<% end %>
-
-<% html_title(l(:label_my_account)) -%>
