--- a/app/views/mio_profilo/account.html.erb
+++ b/app/views/mio_profilo/account.html.erb
@@ -25,16 +25,16 @@
     <% labelled_form_for @user, :url => {:controller => 'mio_profilo', :action => 'account'}, :html => {:method => :post, :class => "register tabular", :class => "step" , :multipart => true} do |f| %>
         <%= error_messages_for 'user' %>
     <div class="fs-abbo-sx1 fs-profiles-esx-btn">
-       <label><%= f.radio_button :use_gravatar,true, {:checked => @user.use_gravatar == true,  :onchange => "funct_avatar('g','fs-photo-edit','user_use_gravatar_true')"} %> <%= 'Usa mail su Gravatar' %></label><br/>
-          <label><%= f.radio_button :use_gravatar,false, {:checked => @user.use_gravatar == false,  :onchange => "funct_avatar('a','fs-photo-edit','user_use_gravatar_false')"} %> <%= 'Usa tua immagine Avatar' %></label><br/>
+       <label><%= f.radio_button :use_gravatar,true, {:checked => @user.use_gravatar == true,  :onchange => "funct_avatar('g','fs-photo-edit','user_use_gravatar_true');"} %> <%= 'Usa mail su Gravatar' %></label><br/>
+          <label><%= f.radio_button :use_gravatar,false, {:checked => @user.use_gravatar == false,  :onchange => "funct_avatar('a','fs-photo-edit','user_use_gravatar_false');"} %> <%= 'Usa tua immagine Avatar' %></label><br/>
       <%= f.file_field :photo, :id=> "uphoto"   %>
      </div>
     <div id="fs-photo-edit" class="fs-abbo-dx1">
             <% if @user.use_gravatar.nil? || @user.use_gravatar == 1 %>
-                <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-a" style="display:none;">' + image_tag(@user.photo.url(:l)) + '</div>
+                <%= '<div id="fs-photo-edit-a" style="display:none;">' + image_tag(@user.photo.url(:l)) + '</div>
                              <div id="fs-photo-edit-g" style="display:block;">' + gravatar_for(@user, :size => 120) + ' </div>' %>
             <% else %>
-                <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-a" style="display:block;">' + image_tag(@user.photo.url(:l)) + '</div>
+                <%= '<div id="fs-photo-edit-a" style="display:block;">' + image_tag(@user.photo.url(:l)) + '</div>
                              <div id="fs-photo-edit-g" style="display:none;">' + gravatar_for(@user, :size => 120) + ' </div>' %>
             <% end %>
           </div>
@@ -218,7 +218,7 @@
     document.getElementById('uphoto').addEventListener('change', function (event) {
                 if (!event) // i.e. the argument is undefined or null
                     event = window.event;
-                handleFileSelect(event, 'fs-photo-edit-i', 'i')
+                handleFileSelect_fs(event, 'fs-photo-edit', 'user_use_gravatar_false')
             }, false
 
     );
@@ -521,4 +521,3 @@
 </script>
 
 <div class="clearfix"></div>
-
