--- a/app/views/issues/edit.html.erb
+++ b/app/views/issues/edit.html.erb
@@ -1,6 +1,6 @@
 <h2><%=h "#{@issue.tracker.name} ##{@issue.id}" %></h2>
 
-<% if @issue.quesito_news and !@issue.quesito_news.nil? %>
+<% if @issue.news_id && @issue.news_id > 0 && @issue.quesito_news && @news %>
   <div class=""> <%#splitcontentright%>
     <fieldset class="box tabular">
       <legend><b><%=l(:label_issue_from_news)%></b></legend>
