--- a/app/views/news/_abstract.html.erb
+++ b/app/views/news/_abstract.html.erb
@@ -11,5 +11,6 @@
 <p><% unless @news.summary.blank? %><em><%=h @news.summary %></em><br /><% end %>
 <span class="author"><%= authoring @news.created_on, @news.author %></span></p>
 <div class="wiki">
-<%= textilizable(@news.description) %>
+<%# textilizable(@news.description) %>
+<%= ckeditorzable_fs(@news.description) %>
 </div>
