--- a/app/views/newsletters/invii.html.erb
+++ b/app/views/newsletters/invii.html.erb
@@ -1,8 +1,9 @@
 <div class="contextual">
-<em class="hide">Limit <%= @limit %></em>
-<em class="hide">offset <%= @offset %></em>
+<em class="hide">Limit <%# @limit %></em>
+<em class="hide">offset <%# @offset %></em>
 <em class="hide">convention id <%= @convention_id %></em>
-<em class="hide">convention id <%= @role %></em>
+<em class="hide">role id <%= @role %></em>
+<em class="hide">name <%= @name %></em>
 
 </div>
 
@@ -23,7 +24,8 @@
 </p>
 
 <label for='role'><%= l(:field_abbonamento_type) %>:</label>
-<%= select_tag 'role', users_roles_options_for_select(@role), :class => "small", :onchange => "this.form.submit(); return false;", :selected => @role  %>
+<%= users_roles_options_for_select(@role.to_s) %>
+<%# select_tag 'role', users_roles_options_for_select(@role.to_s), :class => "small", :onchange => "this.form.submit(); return false;", :selected => @role.to_s  %>
 
 <label for='name'><%= l(:label_user) %>:</label>
 <%= text_field_tag 'name', params[:name], :size => 30 %>
@@ -41,6 +43,7 @@
   <%# sort_header_tag('lastname', :caption => l(:field_lastname)) %>
   <%= sort_header_tag('mail', :caption => l(:field_mail)) %>
   <%= sort_header_tag('datascadenza', :caption => l(:field_data_scadenza), :default_order => 'desc') %>
+  <%= sort_header_tag('role_id', :caption => l(:field_ruolo), :default_order => 'desc') %>
   <%= sort_header_tag('convention_id', :caption => l(:field_convention), :default_order => 'desc') %>
     <th style="text-align:left; width: 40px;"><i class="icon icon-email" title="Imposti per l'invio email"></i><input id="checkbox_selector" type="checkbox" name="invia" class="selectall" checked="checked" /></th>
   </tr></thead>
@@ -52,9 +55,11 @@
   <td class="username"><%= avatar(user, { :size => "14", :class => "no-div" }) %><%= link_to h(user.name), edit_user_path(user) %></td>
   <td class="email"><%= mail_to(h(user.mail)) %></td>
   <%# align="center"><%= checked_image user.admin? %>
-  <td class="datascadenza" align="center"><%= format_date(user.scadenza) %></td>
-  <td class="convention_id" align="center"><%= h truncate(user.convention.name, :length => 30) unless user.privato? %></td>
-    <td class="checkbox"><%= check_box_tag 'ids[]', user.id, {:name => "invia"} %></td>
+  <td class="datascadenza" align="left"><%= format_date(user.scadenza) %></td>
+  <td class="role" align="left"> <%= user_role_iconized(user, :size => "s", :icon_for => user.uicon, :text => '') %>
+</td>
+  <td class="convention_id" align="left"><%= h truncate(user.convention.name, :length => 30) unless user.privato? %></td>
+  <td class="checkbox"><%= check_box_tag 'ids[]', user.id, {:name => "invia"} %></td>
       <%# change_status_link(user) %>
       <%# link_to(l(:button_delete), user, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') unless User.current == user %>
     </td>
@@ -78,6 +83,6 @@
 
   </script>
 </div>
-<p class="pagination"><%= pagination_links_full @user_pages, @user_count %></p>
+<p class="pagination"><%# pagination_links_full @user_pages, @user_count %></p>
 
 <% html_title(l(:label_user_plural)) -%>
