--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -2,7 +2,7 @@
 
 <h2><%= issue_heading(@issue) %></h2>
 
-<div class="<%= @issue.css_classes %> details">
+<div class="<%= @issue.css_classes %> details <%= @issue.css_box()%>">
   <%= avatar(@issue.author, {:size => "50", :class => "no-div"}) %>
   <div class="subject">
     <%= render_issue_subject_with_tree(@issue) %>
@@ -80,7 +80,13 @@
   <% end %>
 
   <% if @issue.description? || @issue.attachments.any? -%>
-      <p><strong><%= l(:field_description) %></strong></p>
+      <p><strong>
+      <% if !@issue.is_quesito? %>
+        <%= l(:news_fast_reply_text, :num => link_to(@issue.quesito_news.id.to_s, news_path(@issue.quesito_news), { :class => 'icon icon-news_reply_done', :target => '_blank'})) %>
+      <% else %>
+        <%= l(:content_articolo) %>
+      <% end %>
+      </strong></p>
       <% if @issue.description? %>
           <div class="contextual">
             <%= link_to_remote_if_authorized(l(:button_quote), {:url => {:controller => 'journals', :action => 'new', :id => @issue}}, :class => 'icon icon-comment') %>
@@ -105,7 +111,7 @@
 </div>
 <%# inserire qui la risposta veloce %>
 <% if @issue.is_quesito? %>
-    <div class="box details">
+    <div class="box details <%= @issue.css_box()%>">
       <div class="">
         <div id="question" style="margin-bottom:16px;">
           <%= "Stato del quesito: " + @issue.quesito_news.quesito_status_fs_text %>
@@ -114,50 +120,41 @@
         </div>
         <hr/>
         <div id="responses" style="margin-bottom:16px;">
-          <h3 class="responses"><%= l(:quesito_risposta_rapida, :num => @issue.quesito_news.id.to_s) %></h3>
+          <h3 class="responses"><%= l(:news_fast_reply_text, :num => link_to(@issue.quesito_news.id.to_s, news_path(@issue.quesito_news), { :class => 'icon icon-news_fast_reply', :target => '_blank'})) %></h3>
 
           <% if @issue.description? %>
+          <%# per generare la risposta rapida la descrizione deve già essere pieno %>
               <% if @issue.quesito_news.is_issue_reply? %>
-                  <% form_for @issue, :url => {:controller => 'issue_moves', :action => 'fast_reply', :id => @issue} do |f_r| %>
+                  <% form_for @issue, :url => {:controller => 'issue_moves', :action => 'news_fast_reply', :id => @issue} do |f_r| %>
                       <%= f_r.error_messages %>
                       <%= f_r.hidden_field :id, :value => @issue.id %>
-                      <h2><%= l(:label_fast_reply) %></h2>
-                      <% if authorize_for('issues', 'fast_reply') || User.current.admin? || User.current.ismanager? %>
-                          <%= f_r.submit l(:button_news_fast_reply) %>
+                      <h4><%= l(:label_fast_reply) %></h4>
+                      <% if authorize_for('move_issues', 'news_fast_reply') || User.current.admin? || User.current.ismanager? %>
+                          <%= f_r.submit(l(:button_news_fast_reply), :class => "button-blu") %>
                       <% end %>
-
-                      <% if @issue.quesito_news.issues.count > 1 %>
-                          <p><label><b><%= l(:label_reply_members) %></b></label>
-                          <ul>
-                            <% @issue.quesito_news.issues.each do |other_issue|
-                              if other_issue.id != @issue.id %>
-                                    <li><%= link_to other_issue %> ==> <%= link_to other_issue.author %></li>
-                                <% end
-                                   end %>
-                          </ul>
-                          </p>
-                      <% end %>
-
                   <% end %>
               <% end %>
               <hr>
               <% form_for @issue, :url => {:controller => 'issue_moves', :action => 'new', :id => @issue} do |f2| %>
-                  <h2><%= l(:label_reply_article) %></h2>
-                  <% if authorize_for('issues', 'fast_reply') || User.current.admin? || User.current.ismanager? %>
-                      <%= f2.submit l(:button_issue_reply_article) %>
+                  <h4><%= l(:label_reply_article) %></h4>
+                  <% if authorize_for('move_issues', 'news_fast_reply') || User.current.admin? || User.current.ismanager? %>
+                      <%= f2.submit(l(:button_issue_reply_article), :class => "button-blu") %>
                   <% end %>
               <% end %>
           <% else %>
               <p>per creare una <span style="color: red;">risposta rapida*</span> o generare un articolo che andrà a
                 finire su una edizione allora dovete prima scrivere la risposta nel campo
-                <b><%= l(:field_description) %></b></p>
+                <b><%= l(:content_articolo) %></b></p>
           <% end %>
+          <div class="responses">
+            <%= render :partial => 'show_quesito_other_issues', :locals => { :issue => @issue } %>
+          </div>
         </div>
       </div>
     </div>
 <% end %>
 <% if @issue.is_convegno? %>
-    <div class="box details">
+    <div class="box details convegno">
       <div id="convegno" style="margin-bottom:16px;">
         <div class="contextual">
           <%= link_to l(:label_reservation_new), new_reservation_path, :class => 'icon icon-add' %>
