--- a/app/views/cross_organizations/index.html.erb
+++ b/app/views/cross_organizations/index.html.erb
@@ -1,5 +1,8 @@
+<%= render :partial => "type_organizations/index" %>
+ <hr>
+<div class="ui-helper-clearfix"></div>
 <div class="contextual">
-<%= link_to l(:label_cross_organization_new), new_cross_organization_path, :class => 'icon icon-add' %>
+  <%= link_to l(:label_cross_organization_new), new_cross_organization_path, :class => 'icon icon-add' %>
 </div>
 
 <h2><%= l(:label_cross_organization_plural) %></h2>
