--- a/app/views/editorial/profilo_new.html.erb
+++ b/app/views/editorial/profilo_new.html.erb
@@ -10,15 +10,20 @@
   <% form_tag({:action => "profilo_new", :method => :post}, :multipart => true) do %>
       <%= hidden_field_tag :user_id, @this_user.id %>
       <div class="fs-profiles-esx">
-        <div id="fs-photo-edit">
-          <%= '<div id="fs-photo-edit-a" style="display:none;"></div>
-          <div id="fs-photo-edit-g" style="display:block;">' + gravatar_for(@this_user, :size => 120) + ' </div>' %>
-        </div>
+        <% if :use_gravatar? %>
+            <%= '<div id="fs-photo-edit-a" style="display:none;">' + image_tag(@this_user.photo.url(:l)) + '</div>
+          <div id="fs-photo-edit-g" style="display:block;">' + gravatar_for( @this_user , :size => 120) + ' </div>' %>
+        <% else %>
+            <%= '<div id="fs-photo-edit-a" style="display:block;">' + image_tag(@this_user.photo.url(:l)) + '</div>
+          <div id="fs-photo-edit-g" style="display:none;">' + gravatar_for( @this_user , :size => 120) + ' </div>' %>
+            <% end %>
         <div class="fs-vuoto-inline-button  fs-profiles-esx-btn">
-          <label><%= radio_button_tag :use_gravatar, true, :onchange => "funct_avatar('g','fs-photo-edit','use_gravatar_true');" %> <%= 'Usa mail su Gravatar' %></label><br/>
-          <label><%= radio_button_tag :use_gravatar, false, :onchange => "funct_avatar('a','fs-photo-edit','use_gravatar_false');" %> <%= 'Usa tua immagine Avatar' %></label><br/>
+          <label><%= radio_button_tag :use_gravatar, true, @this_user.use_gravatar?, :onchange => "funct_avatar('g','fs-photo-edit','use_gravatar_true');" %> <%= 'Usa mail su Gravatar' %></label><br/>
+          <label><%= radio_button_tag :use_gravatar, false, !@this_user.use_gravatar?, :onchange => "funct_avatar('a','fs-photo-edit','use_gravatar_false');" %> <%= 'Usa tua immagine Avatar' %></label><br/>
+
           <%= file_field_tag :photo %>
-          <h6>nb: usa un'immagine quadrata sarà ridimensionata a 200px per 200px </h6>
+          <br>
+          <h6>Usa un'immagine quadrata meglio se già dimensionata a 200px per 200px </h6>
         </div>
       </div>
       <div class="fs-profiles-ecx">
