--- a/app/views/editorial/_tramenu_assos.html.erb
+++ b/app/views/editorial/_tramenu_assos.html.erb
@@ -2,11 +2,11 @@
 
 <!--  <li> <%# image_tag("/images/banners/"+ ban.banner , :alt => ban.espositore, :width =>80) %> <%# ban.didascalia %> </li> -->
 <%# end %>
-<p class="fs-tramenu-blockheader x-blue">Associazioni aderenti a Fiscosport</p>
-<% if  cross_org_logos.count > 0  %>
+<p class="fs-tramenu-blockheader x-blue">Organismi convenzionati</p>
+<% if  tramenu_convenctions_logo.count > 0  %>
 <div class="list_assos_carousel" style="height:100px; overflow: hidden;" >
   <ul id="carousel_assos_js">
-     <% cross_org_logos.each do |i|  %>
+     <% tramenu_convenctions_logo.each do |i|  %>
         <li>    <%=  image_tag i.image.url(:m) %> </li>
      <% end %>
   </ul>
