--- a/app/views/news/edit.html.erb
+++ b/app/views/news/edit.html.erb
@@ -2,7 +2,21 @@
 
 <% labelled_tabular_form_for @news, :html => { :id => 'news-form', :method => :put } do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
-<%= submit_tag l(:button_save) %>
+
+<% if @news.is_quesito? %>
+  <% if @news.is_wait_reply? %>
+      <p>
+        <%= submit_tag l(:button_news_fast_reply), :class => 'button-blu' %>
+      </p>
+  <% elsif @news.is_fast_reply? %>
+      <p>
+        <%= submit_tag l(:button_news_fast_reply), :class => 'button-blu' %>
+      </p>
+  <% end %>
+<% else %>
+  <%= submit_tag l(:button_save) %>
+<% end %>
+
 <%= link_to_remote l(:label_preview),
                    { :url => preview_news_path(:project_id => @project),
                      :method => 'get',
