--- a/app/views/news/_form.html.erb
+++ b/app/views/news/_form.html.erb
@@ -1,20 +1,19 @@
 <%= f.error_messages %>
 <div class="box tabular">
-<p><%= f.text_field :title, :required => true, :size => 60 %></p>
-<p><%= f.text_area :summary, :cols => 60, :rows => 2 %></p>
-<p><%= f.text_area :description, :required => true, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
-
-<% if @news.is_quesito? %>
-  <%= @news.quesito_status_fs_text %>
   <p><%= f.text_field :title, :required => true, :size => 60 %></p>
-  <%# if !@news.is_fast_reply? %>
-    <p><%= textilizable(@news.reply) %></p>
-  <%# else
-    <p><%= f.text_area :reply, :cols => 80, :rows => 4 %></p>
-    <%# wikitoolbar_for 'news_reply' %>
-  <%# end %>
+  <p><%= f.text_area :summary, :cols => 60, :rows => 2 %></p>
+  <p><%= f.text_area :description, :required => true, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
 
-<% end %>
+  <% if f.object.is_quesito? %>
+    <%= f.object.quesito_status_fs_text %>
+    <p><%= f.text_area :reply, :cols => 80, :rows => 4 %></p>
+    <%# render :partial => 'form_reply_fast', :locals => { :news => f } %>
+    <script type="text/javascript" charset="utf-8">
+        CKEDITOR.replace('news_reply', { toolbar:'Basic', height:200 });
+    </script>
+  <% end %>
 
 </div>
-<%= wikitoolbar_for 'news_description' %>
+<script type="text/javascript" charset="utf-8">
+    CKEDITOR.replace('news_description', { toolbar:'Basic', height:200 });
+</script>
