statuses only for member

--- a/app/views/users/_dati.html.erb
+++ b/app/views/users/_dati.html.erb
@@ -36,7 +36,7 @@
         <p><%= f.text_field :fax, :label => :field_fax, :required => false, :size => 25  %></p>
         <p><%= f.text_field :telefono2, :label => :field_telefono2, :required => false, :size => 25  %></p>
         <p><%= f.text_field :mail2, :label => :field_mail2, :required => false, :size => 25  %></p>
-        <p><%= f.text_field :codice_attivazione, :label => :field_sez, :required => false, :size => 25  %></p>
+        <p><%= f.text_field :codice_attivazione, :label => :field_codice_attivazione, :required => false, :size => 25  %></p>
         <p><%= f.text_field :iva_, :label => :field_iva_, :required => false, :size => 25  %></p>
         <p><%= f.text_field :codicefiscale, :label => :field_codicefiscale, :required => false, :size => 25  %></p>
         <p><%= f.text_field :partitaiva, :label => :field_partitaiva, :required => false, :size => 25  %></p>
